--- a/index.html
+++ b/index.html
@@ -64,6 +64,19 @@
     "prompt": "Your prompt here"
   }'</code></pre>
 
+    <h2>The PromptQL Protocol</h2>
+    <p>As described in the <a href="https://promptql.io/docs/index/" target="_blank" style="color: #ff79c6;">official documentation</a>, PromptQL is designed to understand natural language questions and translate them into deterministic actions across your connected data sources. This means you don't need to learn a complex query language.</p>
+    <p>When supplying a prompt, you should phrase it as a clear, specific question in plain English. The system will then parse your question, map it to the relevant data, and return an accurate, reliable answer.</p>
+    
+    <h3>Examples of Prompts:</h3>
+    <ul>
+        <li style="margin-bottom: 0.5em;">"What was our total revenue for the last quarter in the North America region?"</li>
+        <li style="margin-bottom: 0.5em;">"Show me the top 5 performing marketing campaigns by conversion rate."</li>
+        <li>"Which products have the lowest inventory levels across all warehouses?"</li>
+    </ul>
+
+    <p>The key is to be as explicit as possible in your question to ensure the most accurate response from the underlying data sources.</p>
+
     <h2>WordPress Integration</h2>
     <p>You can call the PromptQL API from your WordPress site using the `wp_remote_post` function. Here is an example of how you can do this from your theme's `functions.php` file or a custom plugin.</p>
     <pre><code>&lt;?php
